<resources>
    <string name="app_name">PersonalFinancialManagement</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="auth_failed">Invalid password or email</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password_">Confirm Password</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Spending</string>
    <string name="title_dashboard">Transaction</string>
    <string name="title_notifications">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="choose_date">Choose Date</string>
    <string name="categories">Categories:</string>
    <string name="amount">Amount</string>
    <string name="private_value">Private</string>
    <string name="public_value">Public</string>
    <string name="description">Description:</string>
    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="back">Back</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="title_activity_expense_adapter">ExpenseAdapter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="date">Date</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="balance_statement">Balance Statement</string>
    <string name="expense">Expense:</string>
    <string name="income">Income:</string>
    <string name="rm545">RM545</string>
    <string name="rm200">RM200</string>
    <string name="balance">Balance:</string>
</resources>