<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="1dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:orientation="horizontal"
        android:padding="8dp"
        android:tag="cards main container">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:scaleType="fitCenter"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/salary"
            />

        <LinearLayout
            android:id="@+id/relative"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textColor="@color/white"
                android:textSize="16sp" />

<!--            <TextView-->
<!--                android:id="@+id/amount"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/amount"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="12sp" />-->

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

<!--            <ImageButton-->
<!--                android:id="@+id/dollar"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:layout_alignParentTop="true"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:background="@android:color/transparent"-->
<!--                android:scaleType="fitCenter"-->
<!--                android:src="@drawable/ic_baseline_money_off_24" />-->

            <TextView
                android:id="@+id/amount"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>