<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    android:scrollbarStyle="insideInset"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update record"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:background="@drawable/border_cardview">


                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/email"
                    android:src="@drawable/ic_baseline_attach_money_24" />


                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/amount"
                    android:paddingStart="9dp"
                    android:paddingLeft="9dp"
                    android:paddingEnd="9dp"
                    android:paddingRight="9dp"
                    android:spinnerMode="dialog"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:baselineAligned="false"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal"
                    android:background="@drawable/border_cardview">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/email"
                        android:src="@drawable/calender" />

                    <TextView
                        android:id="@+id/calender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:text="@string/choose_date"
                        android:spinnerMode="dialog" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:background="@drawable/border_cardview">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:text="@string/categories" />

                <Spinner
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/textArea_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_cardview"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:padding="4dp"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:lines="3"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:scrollHorizontally="false" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:padding="4dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"

                    android:text="@string/back"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/apply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:padding="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/add"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>







