<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:weightSum="3"
    android:background="#F8F8F8"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:layout_weight="1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="2"
        >
        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"

                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>



            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input"
                android:layout_width="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input"
                    android:layout_width="130dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_text_input"
                    android:layout_width="130dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>


            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_margin="2dp"
                android:text="@string/sign_up"
                android:textStyle="bold" />



        </LinearLayout>

    </ScrollView>


</LinearLayout>